# MassacreData

./: CMakeLists.txt
DataArena/: mainconf.yaml  quasicrystal.mtl
DataArena/Materials/: arena.mtl  branch.mtl  flags.mtl  leaves.mtl  opaque.mtl  quasicrystal.mtl  sky.mtl  trans.mtl
DataArena/Meshes/: arena.mesh  flags.mesh  gates.mesh  leaves.mesh  sky.mesh  trans.mesh
DataArena/Models/Arena/: arena.json  arena.mtl  branch.mtl  leaves.mtl  trans.json
DataArena/Models/Cube/: cube.mesh
DataArena/Models/Sky/: sky.mesh
DataArena/Shaders/: despair.frag  diffuse.frag  lit.frag  lit.vert  mvp_t0.vert  quasicrystal.frag  sky_t0.vert  unlit.frag
DataArena/Textures/: flag.tex  trans.tex
